# Morphius

./: README.md
AutoPeter/: Makefile  Prototype.cpp  app
AutoPeter/Docs/: Doxyfile
AutoPeter/GraphCore/: CMakeLists.txt  GraphCore.cpp  GraphCore.hpp  cpplint.sh
AutoPeter/GraphCore/Tests/: AddEdgeTest.cpp  InitInvTest.cpp  RemoveEdgeTest.cpp
AutoPeter/GraphRepr/: GraphRepr.cpp  GraphRepr.hpp
AutoPeter/Models/GraphAutomorphismModel/: GraphAutomorphismModel.cpp
AutoPeter/Models/GraphCore/: CMakeLists.txt.orig  GraphCore.cpp  GraphCore.hpp  GraphJsonReader.hpp  graph_core.json  main.cpp  makefile
AutoPeter/Models/GraphCore/Tests/: AddEdgeTest.cpp
AutoPeter/Models/GraphRepresentation/: GraphRepresentation.cpp  GraphRepresentation.hpp
AutoPeter/Models/GraphRepresentation/Tests/: TestJSONSerialization.cpp  graph.json
AutoPeter/Views/: GraphVeiw.cpp
